test-cases/use_before_def.exp
Error detected during type checking of modules use_before_def
test-cases/use_before_def.wybe:2:18: Call to unknown 'result' from use_before_def
