test-cases/use_before_def.wybe
public proc test(?result:int)
       ?result = result + 1
end